# ANSI-C

./: README.md  ansiC.7z  test.txt
FileIO/: CMakeLists.txt  usage.txt
FileIO/src/: filehandle.c
Gyakorlofeladat/: ex1.be  ex1.ki
LinkedList/: CMakeLists.txt
LinkedList orai/: CMakeLists.txt
LinkedList orai/src/: linkedlist.h  main.c
LinkedList/src/: lancoltlista.c  lancoltlista.h  main.c
extra/: !COPYTHIS.txt  CMakeLists.txt  url.txt
extra/src/: filehandle.c  filehandle.h  main.c
gyak/: CMakeLists.txt
gyak/src/: lancoltlista.h
practice/: CMakeLists.txt
practice/src/: linkedlist.c
quadratic/: CMakeLists.txt  main.c  quadratic.c  quadratic.h
